# AxiomEngine

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  graph.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  state.py  tasks.py  test_graph.py  test_main.py  test_mechanical.py  test_models.py  test_pipeline_nodes.py
.github/workflows/: ci.yml  publish.yml
deploy/grafana/: axiom-engine.json
nodes/: ranker.py  retriever.py  scorer.py  verification.py
src/axiom_engine/: __main__.py  graph.py  main.py  models.py  state.py
src/axiom_engine/api/: auth.py
src/axiom_engine/cli/: __init__.py  probe.py
src/axiom_engine/config/: logging.py  observability.py  settings.py
src/axiom_engine/nodes/: ranker.py  retriever.py  scorer.py  semantic.py  synthesizer.py  verification.py
src/axiom_engine/utils/: llm.py
src/axiom_engine/verifiers/: mechanical.py
src/axiom_rag_engine/: __main__.py  audit_store.py  cache.py  graph.py  main.py  marshalling.py  models.py  scoring.py
src/axiom_rag_engine/api/: auth.py  sse.py
src/axiom_rag_engine/cli/: __init__.py  audit.py  probe.py
src/axiom_rag_engine/config/: logging.py  observability.py  settings.py
src/axiom_rag_engine/nodes/: ranker.py  retriever.py  scorer.py  semantic.py  synthesizer.py  verification.py
src/axiom_rag_engine/utils/: audit.py  llm.py
test_docker/: README.md
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_graph.py  test_main.py  test_mechanical.py  test_models.py  test_nodes.py  test_operations.py  test_pipeline_nodes.py  test_sse.py
verifier/: mechanical.py
