[project]
name = "axiom-engine"
version = "2.3.0"
description = "Axiom Engine System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3.0",
    "litellm>=1.82,<2.0",
    "langgraph>=1.1,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Pyflakes (F), pycodestyle (E), isort (I)
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["axiom_engine"]
